--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
                 <h1 class="ml-9">
                     Soluciones Blockchain    
@@ -15,13 +15,9 @@
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    Soluciones Blockchain    
-                </h1>
-                <hr>
-                <p> 
+                <p class="mt-16"> 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
                     dolore pariatur voluptates, quae mollitia quaerat tenetur 
@@ -29,13 +25,9 @@
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    Soluciones Blockchain    
-                </h1>
-                <hr>
-                <p> 
+                <p class="mt-16"> 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
                     dolore pariatur voluptates, quae mollitia quaerat tenetur 
@@ -44,29 +36,11 @@
                    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    Soluciones Blockchain    
-                </h1>
-                <hr>
-                <img src="../../../assets/img/keta.svg" class="img1 pequeño" alt="marketing exponencial">    
+                <img src="../../../assets/img/keta.svg" class="img1 pequeño mt-9" alt="marketing exponencial">    
             </article>
         </div>   
     </div>
 </div>    
 <app-footer></app-footer>
-
-<!-- <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6 ml-1">{{"DEVELOPERS.TITLE" | translate}}</p>
-                </div>
-                <img src="../../../assets/img/nueva_zelanda.jpeg" class="img1" alt="">
-            </div>
-            <div class="col col-md-3 ml-2 servicios-box">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-6 h5 small"> {{"DEVELOPERS.PARAGRAPH" | translate}}</p>
-            </div>
-        </div> -->
