--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -1,45 +1,32 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
   <div class="row">
-    <div class="col-md-3 mt-16">
-      <article>
+    <div class="col-md-3 mt-6 mb-16">
+      <article> 
         <h1 class="ml-9">
           {{"DIGITAL-PROJECTS.TITLE" | translate}}
         </h1>
         <hr>
         <p>
-          {{"DIGITAL-PROJECTS.PARAGRAPH" | translate}}
+          {{"DIGITAL-PROJECTS.PARAGRAPH.0" | translate}}
         </p>
       </article>
     </div>
-    <div class="col-md-3 mt-16">
+    <div class="col-md-3 mt-16 mb-16">
       <article>
-        <h1 class="ml-9">
-          {{"DIGITAL-PROJECTS.TITLE" | translate}}
-        </h1>
-        <hr>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quia,
-          aperiam iure rerum aliquam harum amet libero quo incidunt ratione. Quae,
-          laboriosam repellat! Error facilis in molestias inventore, itaque repudiandae?
+        <p class="mt-16 mb-16">
+          {{"DIGITAL-PROJECTS.PARAGRAPH.1" | translate}}
         </p>
       </article>
     </div>
-    <div class="col-md-3 mt-16">
+    <div class="col-md-3 mt-16 mb-16">
       <article>
-        <h1 class="ml-9">
-          {{"DIGITAL-PROJECTS.TITLE" | translate}}
-        </h1>
-        <hr>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quia,
-          aperiam iure rerum aliquam harum amet libero quo incidunt ratione. Quae,
-          laboriosam repellat! Error facilis in molestias inventore, itaque repudiandae?
+        <p class="mt-16 mb-16">
+          {{"DIGITAL-PROJECTS.PARAGRAPH.2" | translate}}
         </p>
-
       </article>
     </div>
-    <div class="col-md-3 mt-16">
+    <div class="col-md-3 mt-16 mb-16">
       <article>
         <hr>
         <img src="../../../assets/img/proyecDigi.svg" class="img1 pequeño" alt="Proyectos Digitales">
@@ -47,3 +34,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
