--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -1,62 +1,36 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
                 <h1 class="centrar">
                     {{"COMMERCE.TITLE" | translate}}    
                 </h1>
                 <hr>
                 <p> 
-                    {{"COMMERCE.PARAGRAPH" | translate}}
+                    {{"COMMERCE.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"COMMERCE.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"COMMERCE.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"COMMERCE.PARAGRAPH.1" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"COMMERCE.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"COMMERCE.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"COMMERCE.PARAGRAPH.2" | translate}}
                 </p>   
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"COMMERCE.TITLE" | translate}}    
-                </h1>
-                <hr>
                 <img src="../../../assets/img/ecom.png" class="img1 pequeño" alt="e-commerce">    
             </article>
         </div>   
     </div>
 </div>    
 <app-footer></app-footer>
-
-<!-- <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6 ml-6">{{"COMMERCE.TITLE" | translate}}</p>
-                </div>
-                
-            </div>
-            <div class="col col-md-3 ml-2 servicios-box">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class=" pb-6 pt-6 small">{{"COMMERCE.PARAGRAPH" | translate}}</p>
-            </div>
-        </div> -->
