--- a/src/app/Components/developers/developers.component.html
+++ b/src/app/Components/developers/developers.component.html
@@ -1,50 +1,26 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-4 mt-11 mb-16">
             <article>
                 <h1 class="ml-9">
                     {{"DEVELOPERS.TITLE" | translate}}    
                 </h1>
                 <hr>
                 <p> 
-                    {{"DEVELOPERS.PARAGRAPH" | translate}}
+                    {{"DEVELOPERS.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-4 mt-16 mb.16">
             <article>
-                <h1 class="ml-9">
-                    {{"DEVELOPERS.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus soluta 
-                    consequatur cumque corporis nesciunt dignissimos excepturi quae modi itaque 
-                    assumenda possimus ratione accusamus, maxime vitae similique reiciendis sapiente non ad.
+                <p class="mt-16 mb-16"> 
+                    {{"DEVELOPERS.PARAGRAPH.1" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-4 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"DEVELOPERS.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus soluta 
-                    consequatur cumque corporis nesciunt dignissimos excepturi quae modi itaque 
-                    assumenda possimus ratione accusamus, maxime vitae similique reiciendis sapiente non ad.
-                </p>
-                   
-            </article>
-        </div>
-        <div class="col-md-3 mt-16">
-            <article>
-                <h1 class="ml-9">
-                    {{"DEVELOPERS.TITLE" | translate}}    
-                </h1>
-                <hr>
                 <img src="../../../assets/img/nueva_zelanda.jpeg" class="img1 pequeño" alt="Nueva_Zelanda">    
             </article>
         </div>   
