--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
                 <h1 class="ml-9">
                     {{"MARKETING.TITLE" | translate}}    
@@ -12,24 +12,16 @@
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"MARKETING.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
+                <p class="mt-16 ml-6"> 
                     {{"MARKETING.PARAGRAPH-1" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"MARKETING.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <ul class="mt-8 ml-12">
+                <ul class="ml-12 mt-16">
                     <li>
                         {{"MARKETING.LIST" | translate}}
                     </li>
@@ -49,36 +41,11 @@
                    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"MARKETING.TITLE" | translate}}    
-                </h1>
-                <hr>
                 <img src="../../../assets/img/markExp.svg" class="img1 pequeño" alt="marketing exponencial">    
             </article>
         </div>   
     </div>
 </div>
 <app-footer></app-footer>
-  <!-- <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
-                </div>
-                <img src="../../../assets/img/markExp.svg" class="img1" alt="">
-            </div>
-            <div class="col col-md-3 ml-2 servicios-box">
-                <img src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class="  pt-4">{{"MARKETING.PARAGRAPH" | translate}}</p>
-                <p class=" pb-4 pt-6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
-                <ul class=" pb-4">
-                    <li>{{"MARKETING.LIST" | translate}}</li>
-                    <li>{{"MARKETING.LIST-1" | translate}}</li>
-                    <li>{{"MARKETING.LIST-2" | translate}}</li>
-                    <li>{{"MARKETING.LIST-3" | translate}}</li>
-                    <li>{{"MARKETING.LIST-4" | translate}}</li>
-                </ul>
-            </div>
-        </div> -->
