--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-6 mt-16 mb-16">
             <article>
                 <h1 class="centrar">
                     {{"SERVICES.TITLE" | translate}}
@@ -12,35 +12,9 @@
                 </p>
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-6 mt-2 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"SERVICES.TITLE" | translate}}
-                </h1>
-                <hr>
-                <p>
-                    {{"SERVICES.PARAGRAPH" | translate}}
-                </p>
-            </article>
-        </div>
-        <div class="col-md-3 mt-16">
-            <article>
-                <h1 class="centrar">
-                    {{"SERVICES.TITLE" | translate}}
-                </h1>
-                <hr>
-                <p>
-                    {{"SERVICES.PARAGRAPH" | translate}}
-                </p>
-            </article>
-        </div>
-        <div class="col-md-3 mt-16">
-            <article>
-                <h1 class="centrar">
-                    {{"SERVICES.TITLE" | translate}}
-                </h1>
-                <hr>
-                <img src="../../../assets/img/mark.jpg" class="img1 pequeño" alt="Servicios Web">
+                <img src="../../../assets/img/mark.jpg" class="img1" alt="Servicios Web">
             </article>
         </div>
     </div>
