--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -1,45 +1,33 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
                 <h1 class="centrar">
                     {{"APPS.TITLE" | translate}}
                 </h1>
                 <hr>
                 <p>
-                    {{"APPS.PARAGRAPH" | translate}}
+                    {{"APPS.PARAGRAPH.0" | translate}}
                 </p>
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"APPS.TITLE" | translate}}
-                </h1>
-                <hr>
-                <p>
-                    {{"APPS.PARAGRAPH" | translate}}
+                <p class="mt-16">
+                    {{"APPS.PARAGRAPH.1" | translate}}
                 </p>
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"APPS.TITLE" | translate}}
-                </h1>
-                <hr>
-                <p>
-                    {{"APPS.PARAGRAPH" | translate}}
+                <p class="mt-16">
+                    {{"APPS.PARAGRAPH.2" | translate}}
                 </p>
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
-                <h1 class="centrar">
-                    {{"APPS.TITLE" | translate}}
-                </h1>
-                <hr>
                 <img src="../../../assets/img/app.png" class="img1 pequeño" alt="">
             </article>
         </div>
