--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -1,45 +1,33 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
                 <h1 class="ml-9">
                     {{"DIGITAL-ART.TITLE" | translate}}    
                 </h1>
                 <hr>
                 <p> 
-                    {{"DIGITAL-ART.PARAGRAPH" | translate}}
+                    {{"DIGITAL-ART.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"DIGITAL-ART.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"DIGITAL-ART.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"DIGITAL-ART.PARAGRAPH.1" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"DIGITAL-ART.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"DIGITAL-ART.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"DIGITAL-ART.PARAGRAPH.2" | translate}}
                 </p>   
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"DIGITAL-ART.TITLE" | translate}}    
-                </h1>
-                <hr>
                 <img src="../../../assets/img/Recurso 11.png" class="img1 pequeño" alt="Arte Digital">   
             </article>
         </div>   
