--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer>
   <!-- Section: Links  -->
-  <section class="">
+  <section class="estilo">
     <div class="container text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
