--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -85,3 +85,64 @@ animation: fadeIn 4s infinite linear;
     padding-left: 65px;
     padding-right: 25px;
 }
+
+/* Botón 64 */
+.button-64 {
+  align-items: center;
+  background-image: linear-gradient(144deg,#021e5a, #4ee6f1 50%,#012863);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: orbitron;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  width: 10rem;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  margin-left: 22rem;
+  margin-top: -2.5rem;
+}
+
+.button-64:active,
+.button-64:hover {
+  outline: 0;
+}
+
+.button-64 span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.button-64:hover span {
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .button-64 {
+    font-size: 24px;
+    min-width: 196px;
+  }
+}
+
+#siguenos {
+    display: block;
+    margin-top: 3rem;
+    margin-left: 5rem;
+}
+
+.azul:hover {
+    color: #4ee6f1;
+}
