--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,11 +10,32 @@
   <div class="m-0 vh-100 row justify-content-center align-items-center">
     <div class="col-auto text-center">
       <img class="home-logo img-fluid" src="../../../assets/img/Home/keta1.svg" />
+
+
       <!-- <img class="home-sombra" src="../../../assets/img/mancha de tinta.svg" /> -->
 
       <!-- <img class="mx-auto d-block" src="../../assets/img/Home/candado.svg" /> -->
-      <a class="nav-link-1" routerLink="/inicio">Ingresa</a> 
-      Síguenos en: Twitter | Facebook | LinkedIn
-    </div>
+      <!-- <a class="nav-link-1" routerLink="/inicio">Ingresa</a>
+       -->
+
+
+<a routerLink="/inicio" class="button-64">
+    <span class="text">
+      Ingresa
+    </span>
+</a>
+  <span id="siguenos"> 
+    Síguenos en: 
+    <a href="https://twitter.com/KetanoLab" target="_blank" class="azul"> 
+      Twitter 
+    </a> | 
+    <a href="https://www.facebook.com/ketanolabsrl" target="_blank" class="azul"> 
+      Facebook 
+    </a>| 
+    <a href="https://www.linkedin.com/company/76603728" target="_blank" class="azul"> 
+      LinkedIn 
+    </a>
+  </span> 
   </div>
+</div>
 </div>
