--- a/src/app/Components/turismo/turismo.component.html
+++ b/src/app/Components/turismo/turismo.component.html
@@ -1,45 +1,33 @@
 <app-nav></app-nav>
-<div class="container">
+<div class="container mt-16 mb-16">
     <div class="row">
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
                 <h1 class="ml-9">
                     {{"SIGHTSEEING.TITLE" | translate}}    
                 </h1>
                 <hr>
                 <p> 
-                    {{"SIGHTSEEING.PARAGRAPH" | translate}}
+                    {{"SIGHTSEEING.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"SIGHTSEEING.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"SIGHTSEEING.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"SIGHTSEEING.PARAGRAPH.1" | translate}}
                 </p>    
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-16 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"SIGHTSEEING.TITLE" | translate}}    
-                </h1>
-                <hr>
-                <p> 
-                    {{"SIGHTSEEING.PARAGRAPH" | translate}}
+                <p class="mt-16"> 
+                    {{"SIGHTSEEING.PARAGRAPH.2" | translate}}
                 </p>   
             </article>
         </div>
-        <div class="col-md-3 mt-16">
+        <div class="col-md-3 mt-11 mb-16">
             <article>
-                <h1 class="ml-9">
-                    {{"SIGHTSEEING.TITLE" | translate}}    
-                </h1>
-                <hr>
                 <img src="../../../assets/img/turismovirt.svg" class="img1 pequeño" alt="Turismo Virtual">    
             </article>
         </div>   
