--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -15,9 +15,9 @@
           <a class="nav-link_3" href="/inicio"><span class="nav-link-3"><p class="text-nav-3">Servicios</p></span></a>
           <a class="nav-link_1" href="/nosotros"><span class="nav-link-1"><p class="text-nav-1">{{"NAV.TITLE-1" | translate}}</p></span></a>
           <a class="nav-link_2" href="/experiencia"><span class="nav-link-2"><p class="text-nav-2">{{"NAV.TITLE-2" | translate}}</p></span></a>
-          <a class="nav-link_4" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab"><span class="nav-link-4"><p class="text-nav-4">{{"NAV.TITLE-4" | translate}}</p></span></a>
-          <a class="nav-link_5" href="#"><span class="nav-link-5"><p class="text-nav-5">EN</p></span></a>
-          <a class="nav-link_6" href="#"><span class="nav-link-6"><p class="text-nav-5">ES</p></span></a>
+          <a class="nav-link_4" href="https://gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" target="_blank"><span class="nav-link-4"><p class="text-nav-4">{{"NAV.TITLE-4" | translate}}</p></span></a>
+          <a class="nav-link_5" href="#!"><span class="nav-link-5"><p class="text-nav-5">EN</p></span></a>
+          <a class="nav-link_6" href="#!"><span class="nav-link-6"><p class="text-nav-5">ES</p></span></a>
       </div>
     </div>
   </div>
