--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -1,5 +1,4 @@
 <div class="container-nosotros">
-
   <app-nav></app-nav>
   <!-- inicio container -->
   <div class="container"> 
@@ -7,9 +6,6 @@
       <h1 class="text-center mb-5">Sobre Ketanolab</h1>
       <p class="text-justify">{{"WE.PARAGRAPH" | translate}}</p>
     </div>
-    
-
-
     <h1 class="text-center mb-12 "> {{"WE.TITLE" | translate}} </h1>
     <!-- inicio fila 1 -->
     <div class="row equipo">
@@ -22,7 +18,7 @@
             <h5 class="card-title">{{"WE.PERSON-1" | translate}}</h5>
             <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
             Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
-            <a href="https://bo.linkedin.com/in/rogerprado" target="_blank" ></a>
+            <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
           </div>
         </div>
       </div>
@@ -33,8 +29,7 @@
           <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"WE.PERSON-2" | translate}}</h5>
-            <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
-            Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+            <p class="card-text"> {{"WE.PERSON-2_DESCRIPTION" | translate}} </p>
             <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
           </div>
         </div>
@@ -46,16 +41,20 @@
             <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
             <div class="card-img-overlay"> 
               <h5 class="card-title">{{"WE.PERSON-3" | translate}}</h5>
-              <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
-              Tenetur deleniti similique eveniet fugiat exercitationem quas repellat. Sequi et est saepe! Placeat amet. </p>
+              <p class="card-text-milenka"> {{"WE.PERSON-3_DESCRIPTION" | translate}} </p>
               <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
             </div>
           </div>
-          
-
-
       </div>
     </div>
 </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
+    </div>
+
+  </div>
 </div>
 <app-footer></app-footer>
