--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,51 +1,57 @@
 <!-- Footer -->
-<footer>
+<footer class="estilo">
   <!-- Section: Links  -->
-  <section class="estilo">
+  <section>
     <div class="container text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" id="margen">
           <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">Ketanolab</h6>
-          <p><i class="mr-2 fa fa-facebook fa-2x"></i>
-              <i class="mr-2 fa fa-linkedin fa-2x"></i>
-              <i class="mr-2 fa fa-twitter fa-2x"></i></p>
+          <h6 class="text-uppercase fw-bold mb-4 ml-5">Ketanolab</h6>
+          <p><a href="https://www.facebook.com/ketanoLabsrl/" target="_blank"><i class="mr-6 fa fa-facebook fa-2x"></i></a>
+            <a href="https://www.linkedin.com/company/76603728" target="_blank"><i class="mr-6 fa fa-linkedin fa-2x"></i></a>
+            <a href="https://twitter.com/KetanoLab" target="_blank"><i class="mr-2 fa fa-twitter fa-2x"></i></a></p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="margen">
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="scroll">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Servicios</h6>
-          <p><a href="#!" >Arte Digital NFT</a></p>
-          <p><a href="#!" >Head Hunting Developers</a></p>
-          <p><a href="#!" >Coaching Digital</a></p>
+          <p><a href="/marketing" >Marketing Exponencial</a></p>
+          <p><a href="/coaching" >Coaching Digital</a></p>
+          <p><a href="/developers" >Head Hunting Developers</a></p>
           <p>
-            <a href="#!" >Soluciones Blockchain</a>
+            <a href="/dapps" >Aplicaciones Descentralizadas</a>
           </p>
+          <p><a href="/blockchain" >Soluciones Blockchain</a></p>
+          <p><a href="/services" >Servicios Web</a></p>
+          <p><a href="/apps" >Aplicaciones Móviles</a></p>
+          <p><a href="/commerce" >E-commerce</a></p>
+          <p><a href="/turismo" >Turismo Virtual</a></p>
+          <p><a href="/arte" >Arte Digital NFT</a></p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" id="margen">
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Enlaces</h6>
           <p>
-            <a href="#!" >Nosotros</a>
+            <a href="/nosotros" >Nosotros</a>
           </p>
           <p>
-            <a href="#!" >Nuestra Experiencia</a>
+            <a href="/experiencia" >Nuestra Experiencia</a>
           </p>
           <p>
-            <a href="#!" >Oficina Virtual</a>
+            <a href="https://app.gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" target="_blank">Oficina Virtual</a>
           </p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" id="margen">
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
             Contacto
