--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -2,7 +2,7 @@
   background-image: url("../../../assets/img/background-3883181_1920.jpg");
   background-size: cover;
   position: relative;
-  height: 100vh;
+  height: 110vh;  
 }
 
 .container-nosotros::before {
@@ -30,72 +30,81 @@
 .tarjeta {
   position: relative;
   overflow: hidden;    
-  height: 400px;
+  height: 20rem;
   margin-right: 1rem;
   margin-left: 1rem;
   background-color: transparent;
 }
 
 
-  .card * {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all 0.35s ease;
-    transition: all 0.35s ease;
-  }
+.card * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
 
-  .card-img-overlay {
-    color: #fff;
-    position: absolute;
-    top: calc(81%);
-    width: 100%;
-    background-color: #00172a;
-    padding: 15px 25px 65px;
-  }
-  .card-img-overlay::before {
-    position: absolute;
-    content: '';
-    z-index: 2;
-    bottom: 100%;
-    left: 0;
-    width: 100%;
-    height: 80px;
-  }
-  
-  .card-text {
-    margin-top: 2rem;
-  }
-  .card-title {
-    font-weight: bold;
-    font-size: 1.4rem;
-    text-transform: uppercase;
-    font-family: "orbitron";
-  }
-  .card-text {
-    font-size: 0.9em;
-    letter-spacing: 1px;
-    opacity: 0.9;
-  }
-  .card a {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-  }
-  .card:hover .card-img-overlay {
-    top: 80px;  
-  }
+.card-img-overlay {
+  color: #fff;
+  position: absolute;
+  top: calc(77%);
+  width: 100%;
+  background-color: #00172a;
+  padding: 15px 25px 65px;
+}
+.card-img-overlay::before {
+  position: absolute;
+  content: '';
+  z-index: 2;
+  bottom: 100%;
+  left: 0;
+  width: 100%;
+  height: 80px;
+}
 
-  .marco-ext {
-    background-repeat: no-repeat;
-    background-image: linear-gradient(#fff, #fff),
-    linear-gradient(#fff, #fff),
-    linear-gradient(#fff, #fff),
-    linear-gradient(#fff, #fff); 
-    background-size: 2px 37%, 15% 2px, 2px 38%, 15% 2px, calc(100% - 1px) calc(100% - 1px);
-    background-position: top left, left top, right bottom, right bottom, 1px 1px;
-    padding: 10px;
-    margin: 2rem 2rem;
-    }
+.card-text {
+  margin-top: 2rem;
+}
+
+.card-title {
+  font-weight: bold;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-family: "orbitron";
+}
+.card-text {
+  font-size: 0.9em;
+  letter-spacing: 1px;
+  opacity: 0.9;
+}
+
+.card-text-milenka {
+  font-size: 0.6em;
+  letter-spacing: 1px;
+  opacity: 0.9;
+}
+
+.card a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.card:hover .card-img-overlay {
+  top: 0rem;  
+}
+
+.marco-ext {
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#fff, #fff),
+  linear-gradient(#fff, #fff),
+  linear-gradient(#fff, #fff),
+  linear-gradient(#fff, #fff); 
+  background-size: 2px 37%, 15% 2px, 2px 38%, 15% 2px, calc(100% - 1px) calc(100% - 1px);
+  background-position: top left, left top, right bottom, right bottom, 1px 1px;
+  padding: 10px;
+  margin: 2rem 2rem;
+}
